Fixes leave button alignment

--- a/app/css/application.css
+++ b/app/css/application.css
@@ -89,10 +89,6 @@ footer {
   width: 100%;
 }
 
-.small-message {
-  font-size: 240%;
-}
-
 footer .x {
   text-shadow: 0px -1px 0px hsla(355, 63%, 30%, 0.6),
                1px 1px 0px hsla(355, 63%, 90%, 0.9);
@@ -104,6 +100,8 @@ footer .o {
 }
 
 button {
+
+  position: relative;
   font-size: 130%;
   font-weight: 600;
   color: hsla(176, 100%, 90%, 1.0);
@@ -124,13 +122,13 @@ button {
 }
 
 button:hover {
-  margin-top: 2px;
+  top: 2px;
   -webkit-box-shadow: 0 3px 0 0 hsla(176, 55%, 38%, 0.9);
   box-shadow: 0 3px 0 0 hsla(176, 55%, 38%, 0.9);
 }
 
 button:active {
-  margin-top: 4px;
+  top: 4px;
   -webkit-box-shadow: 0 -2px 0 0 hsla(176, 55%, 38%, 0.9);
   box-shadow: 0 -2px 0 0 hsla(176, 55%, 38%, 0.9);
   background-color: hsla(176, 55%, 50%, 0.9);
@@ -138,12 +136,30 @@ button:active {
 
 div.button-container {
   width: 150px;
-  float: left;
+  display: inline-block;
 }
 
 div.buttons-container {
-  width: 300px;
-  margin: 0 auto;
+  margin: 20px auto;
+}
+
+button.alert {
+  color: hsla(355, 100%, 95%, 0.9);
+  background-color: hsla(355, 63%, 56%, 0.9);
+
+  -webkit-box-shadow: 0 5px 0 0 hsla(355, 63%, 45%, 0.9);
+  box-shadow: 0 5px 0 0 hsla(355, 63%, 45%, 0.9);
+}
+
+button:hover.alert {
+  -webkit-box-shadow: 0 3px 0 0 hsla(355, 63%, 45%, 0.9);
+  box-shadow: 0 3px 0 0 hsla(355, 63%, 45%, 0.9);
+}
+
+button:active.alert {
+  -webkit-box-shadow: 0 -2px 0 0 hsla(355, 63%, 45%, 0.9);
+  box-shadow: 0 -2px 0 0 hsla(355, 63%, 45%, 0.9);
+  background-color: hsla(355, 63%, 56%, 0.9);
 }
 
 a {
@@ -169,29 +185,9 @@ a:hover {
   box-shadow: 0 3px 0 0 hsla(176, 55%, 38%, 0.9);
 }
 
-button.alert {
-  padding: 13px 20px;
-  width: 90%;
-  color: hsla(355, 100%, 95%, 0.9);
-  background-color: hsla(355, 63%, 56%, 0.9);
-  -webkit-box-shadow: 0 5px 0 0 hsla(355, 63%, 45%, 0.9);
-  box-shadow: 0 5px 0 0 hsla(355, 63%, 45%, 0.9);
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
-  border-radius:5px;
-}
-
-button:hover.alert {
-  margin-top: 2px;
-  -webkit-box-shadow: 0 3px 0 0 hsla(355, 63%, 45%, 0.9);
-  box-shadow: 0 3px 0 0 hsla(355, 63%, 45%, 0.9);
-}
-
-button:active.alert {
-  margin-top: 4px;
-  -webkit-box-shadow: 0 -2px 0 0 hsla(355, 63%, 45%, 0.9);
-  box-shadow: 0 -2px 0 0 hsla(355, 63%, 45%, 0.9);
-  background-color: hsla(355, 63%, 56%, 0.9);
+.small-message {
+  font-size: 240%;
+  margin: 10px 0;
 }
 
 .large-message {
